feat: Add signup to API
