# apps/api/src/authRoutes/routes.ts
@@ -1,0 +1,9 @@
+import { Router } from 'express'
+
+import { signup } from './signup'
+
+const authRouter = Router()
+
+authRouter.post('/auth/signup', signup)
+
+export { authRouter }
